atualiza código de conduta

--- a/layouts/partials/diversity.html
+++ b/layouts/partials/diversity.html
@@ -11,8 +11,7 @@ class="bg-light-gray"
        
           <p>
 <b>Português:</b>
-      
-        O satRday dedica-se a proporcionar uma experiência de conferência inclusiva e sem assédio para todos(as) os(as) participantes, independentemente, mas não limitado a, gênero, orientação sexual, deficiência, atributos físicos, idade, etnia, posição social, religião ou afiliação política. Não toleramos assédio aos participantes (incluindo organizadores e fornecedores) de qualquer forma. Sugestões e imagens sexuais não são apropriadas para nenhum local da conferência, incluindo apresentações. Qualquer pessoa que violar essas regras poderá receber um aviso ou ser expulso da conferência (sem reembolso), a critério dos organizadores da conferência. Nossa política de código de conduta/anti-assédio pode ser encontrada <a href="https://knowledgebase.satrdays.org/diversity/#code-of-conduct"> aqui </a>.
+O satRdays tem como objetivo proporcionar uma experiência de conferência livre de assédio e inclusiva para todos os participantes, independente, mas não limitado a, gênero, orientação sexual, deficiência, aparência física, idade, raça/etnia, posição social, religião ou afiliação política. Não toleramos nenhuma forma de assédio aos participantes (incluindo organizadores e fornecedores). Imagens e insinuações sexuais não são apropriadas em nenhum local da conferência, incluindo apresentações. Qualquer pessoa que viole estas regras pode ser advertida ou expulsa da conferência (sem reembolso), conforme critérios dos organizadores da conferência. Nossa política de código de conduta/anti-assédio pode ser encontrada <a href="https://saopaulo2019.satrdays.org/codigodeconduta/">aqui</a>.
           
 
       </p>   
