--- a/layouts/partials/clients.html
+++ b/layouts/partials/clients.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading">{{ with .Site.Params.clients_list.title }}{{ . | markdownify }}{{ end }} - Em breve!</h2>
+        <h2 class="section-heading">{{ with .Site.Params.clients_list.title }}{{ . | markdownify }}{{ end }} </h2>
       </div>
     </div>
     <div class="row flexbox{{ if .Site.Params.clients_list.center }} flexbox-center{{ end }}">
