--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -5,8 +5,8 @@
     <div class="intro-text">
       <div class="intro-lead-in">{{ with .Site.Params.hero.title }}{{ . | markdownify }}{{ end }}</div>
       <div class="intro-heading">{{ with .Site.Params.hero.subtitle }}{{ . | markdownify }}{{ end }} </div>
-      <p>Inscrições em breve<br> Submeta uma proposta de palestras ou pôster!</p><br>
-      <a href="#services" class="page-scroll btn btn-xl">{{ with .Site.Params.hero.buttonText }}{{ . }}{{ end }}</a>
+      <p> Inscreva-se a partir de 03/11<br> Submeta uma proposta de palestras ou pôster!</p><br>
+      <a href="https://www.sympla.com.br/1-satrday-sao-paulo__699358" class="page-scroll btn btn-xl">{{ with .Site.Params.hero.buttonText }}{{ . }}{{ end }}</a>
     </div>
   </div>
 </header>
