--- a/layouts/partials/portfolio.html
+++ b/layouts/partials/portfolio.html
@@ -6,7 +6,7 @@ class="bg-light-gray"
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading">{{ with .Site.Params.portfolio.title }}{{ . | markdownify }}{{ end }}</h2>
-        <h3 class="section-subheading text-muted">{{ with .Site.Params.portfolio.subtitle }}{{ . | markdownify }}{{ end }}</h3>
+        <h3 class="section-subheading">{{ with .Site.Params.portfolio.subtitle }}{{ . | markdownify }}{{ end }}</h3>
       </div>
     </div>
     <div class="Talks">
