--- a/layouts/partials/clients.html
+++ b/layouts/partials/clients.html
@@ -1,4 +1,4 @@
-{{ "<!-- Clients Aside -->" | safeHTML }}
+{{ "<!-- Patrocinadores -->" | safeHTML }}
 <aside class="clients">
   <div class="container">
     <div class="row">
@@ -14,10 +14,10 @@
           {{ $url := printf "img/logos/%s" .logo }}
           {{ if .link }}
             <a href="{{ .link }}">
-              <img src="{{ $url | absURL }}" class="img-responsive img-centered" alt="">
+              <img src="{{ $url | absURL }}" class="img-responsive img-centered" alt="{{ .alt }}">
             </a>
           {{ else }}
-            <img src="{{ $url | absURL }}" class="img-responsive img-centered" alt="">
+            <img src="{{ $url | absURL }}" class="img-responsive img-centered" alt="{{ .alt }}">
           {{ end }}
         </div>
       {{ end }}
