adiciona link pra slides e nome de palestras

--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -6,7 +6,7 @@
       <div class="intro-heading">{{ with .Site.Params.hero.subtitle }}{{ . | markdownify }}{{ end }} </div>
 
       
-       <a href="https://www.sympla.com.br/1-satrday-sao-paulo__699358" class="page-scroll btn btn-xl">{{ with .Site.Params.hero.buttonText }}{{ . }}{{ end }}</a>
+       <a href="https://github.com/satRdays/saopaulo2019_slides" class="page-scroll btn btn-xl">{{ with .Site.Params.hero.buttonText }}{{ . }}{{ end }}</a>
     
       </div>
     
